# dvarapala

./: .gitignore  .golangci.yaml  .goreleaser.yaml  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  TODO.md  go.mod  index.html
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  release.yml
cmd/check-gitleaks/: main.go
cmd/debug-policy/: main.go
cmd/dvarapala/: commands.go  daemon.go  daemon_unix.go  daemon_windows.go  doctor.go  hub.go  init.go  install.go  lint.go  logs.go  main.go  policy_watch.go  proxy.go  scan.go  test.go  ui.go  wrap.go
docs/: architecture.md  built-in-rules.md  cli-reference.md  getting-started.md  policy-language.md
docs/deployment/: claude-code.md  claude-desktop.md  cline.md  cursor.md  docker.md  kubernetes.md
examples/claude-desktop/: claude_desktop_config.json
examples/cline/: cline_mcp_settings.json
examples/cursor/: mcp.json
examples/custom-rules/: policy.yaml
examples/docker-compose/: docker-compose.yml
examples/hub/: hub.yaml
examples/kubernetes/: dvarapala-sidecar.yaml
internal/audit/: audit.go  audit_test.go
internal/config/: loader.go  (+1 more)
policies/: default.yaml  destructive-actions.yaml  egress-allowlist.yaml  embed.go  pii.yaml  prompt-injection.yaml  rate-limit.yaml  secrets.yaml  tool-mutation.yaml  tool-poisoning.yaml
sdks/python/: README.md  pyproject.toml
sdks/python/dvarapala/: __init__.py  errors.py  gateway.py
sdks/python/tests/: test_smoke.py
(+57 files in other folders)
